--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -3571,10 +3571,10 @@ blockquote {
   border: 1px solid #fff3;
   border-radius: 20px;
   max-width: 1400px;
-  margin:2%;
-  width:100%;
-  /* margin-left: auto;
-  margin-right: auto; */
+/*   margin:2%;
+  width:100%; */
+  margin-left: auto;
+  margin-right: auto;
   padding: 130px 15px 140px;
   /* padding:2%; */
 }
