--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -12363,3 +12363,20 @@ padding:3em;
     place-self: center;
   }
 }
+
+
+/* custom scrollbar */
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent 15%,#642bff,#ff22e6);
+  border-radius: 10px;
+}
+
